--- a/git-homeworks-neuro-merge/index.html
+++ b/git-homeworks-neuro-merge/index.html
@@ -14,8 +14,8 @@
             <nav class="navbar navbar-expand-md navbar-dark bg-dark">
                 <a class="navbar-brand" href="#">
                     <img src="img/NeuroStartUpIcon.png" width="31" height="31" class="d-inline-block align-top" alt="">
-                    NeuroStartUp
-                </a>
+                    <NeuroStartUp>
+                
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -39,8 +39,7 @@
                 <div class="promo-container">
                     <div class="row">
                         <div class="col-5 mx-auto text-center">
-                            <b class="promo-title">Искусственный интеллект решающий<br>ваши бизнес-задачи</b>
-                            <p class="promo-description mt-5">Воспользуйтесь современными возможностями искусственного интеллекта, оставив конкурентов позади!</p>
+                            
                         </div>
                     </div>
                 </div>
